fix(firice): Fix li-gawralay misgloss

--- a/firice.tex
+++ b/firice.tex
@@ -85,7 +85,7 @@ ground, you win.
 \end{exe}
 
 \begin{exe}
-\ex{} \gll{}Kula kake-pah pa-lifasatha-sa iba   peluelah  kalese ligawralay, kake-pah pa-njínza-sa.\\
+\ex{} \gll{}Kula kake-pah pa-lifasatha-sa iba   peluelah  kalese li-gawralay, kake-pah pa-njínza-sa.\\
             if   2SG-NOM  PFV-remove-PRS  other people-PL from   NEG-ground  2SG-NOM  PFV-win-PRS\\
       \glt{}If you remove other people from the ground, you win.
 \end{exe}
