feat: Update camelcaseco translation

--- a/camelcaseco.tex
+++ b/camelcaseco.tex
@@ -38,12 +38,14 @@ June 16, 2024
 \subsection{Thiguka}
 Capitalization preserved as-is from the original text.
 
+\begin{quotation}
 saguelah geyle saparakithielah basko pelupahsa kalesure.
 geguisa geylekithisa kakaslesure, kasapafay leylepah kas ifas.
 fasahri apalkala pegukata peluelahpafay kalahkela diledgulatay, ka kadadiledkalasa fathas litalokala katataysa.
 kadadiledpafaysa paslapahsa esahla, ka paslapahgula las laki, ka las susokala las kiksesekala.
 kadapaslakalagula ifigilepelupahelah kufa sugutalo sutepahelah lores gawralaykala asila paslakala.
 geylepahsa kaberethata, ka ifigilepelupahelah kalakad paguiba paslakalasa, ka kasakaki sutetayelah.
+\end{quotation}
 
 
 \subsection{Lemuria's translation}
