feat: Update Firice's translation

--- a/firice.tex
+++ b/firice.tex
@@ -34,7 +34,7 @@ To: Lemuria
 
 June 14, 2024
 
-(converted to \LaTeX{} June 16, 2024)
+(converted to \LaTeX{} June 21, 2024)
 
 \section{Translation}
 \subsection{Thiguka}
@@ -73,7 +73,7 @@ ground, you win.
 \end{exe}
 
 \begin{exe}
-\ex{} \gll{}pa-patiray-ta     "dzinjrýng-pah sa-dasay-ta."\\
+\ex{} \gll{}pa-patiray-ta     ``dzinjrýng-pah sa-dasay-ta.''\\
             PFV-translate-PST  hunt-NOM      IPFV-die-PST\\
       \glt{}translated to "deadly hunt".
 \end{exe}
@@ -92,7 +92,7 @@ ground, you win.
 
 \section{Commentary}
 \begin{enumerate}
-    \item So far this is one of the easiest ones. It was done in about 30-40 minutes according to the time tracker in my productivity app.
+    \item So far this is one of the easiest ones. It was done in about 30-40 minutes according to the time tracker in my productivity app. However the harder part was double-checking and finding ways to not procrastinate.
 \end{enumerate}
 
 \newpage
