feat: Attempted sense-by-sense translations

--- a/camelcaseco.tex
+++ b/camelcaseco.tex
@@ -49,7 +49,11 @@ geylepahsa kaberethata, ka ifigilepelupahelah kalakad paguiba paslakalasa, ka ka
 
 
 \subsection{Lemuria's translation}
-Note: The translation is literal.
+The Basko had many games and fun activities, one of which is Ifas.
+In Ifas, ten people from four places form two groups.
+Each group would see ten, not three.
+Two of these places were big and had forests and fields.
+And thus, Ifas was born. People would walk places in search of stones.
 
 \subsubsection{Literal}
 Many games stopped Basko people's fun.
@@ -59,6 +63,7 @@ Each guild saw not three, but ten.
 Each guild's place existed, so two places were big, and forests were fields.
 In each and every place, a member would throw three stones onto that ground.
 The game was born, and people would walk to places to look for stones.
+
 
 \subsection{Gloss}
 Glossing abbreviations:
