--- a/f0rm0r.tex
+++ b/f0rm0r.tex
@@ -49,6 +49,13 @@ Many of our cities have temple choirs with vocalists and instrumentalists.
 Their most valued instruments are the "Uksoth".
 Vocalists cannot sing words because the words are impossible to sing.
 
+\subsubsection{Sense-by-sense}
+I hail from the Pafasithsiputh, where musicians are highly valued.
+After all, we are an honorable society of musicians.
+Many of our cities are home to temple choirs with vocalists and instrumentalists.
+One of our most valued instruments is the Uksoth.
+Though there are words we cannot sing due to them being impossible.
+
 \subsection{Gloss}
 \begin{exe}
     \ex{} \gll{}Thaka-pafay giled-kala -- pothu-pafay leyle-pah ''Pafasithsiputh''-pah gulaya -- rifari-pah ri~gu-rigatari gulaya.\\
