--- a/firice.tex
+++ b/firice.tex
@@ -51,6 +51,12 @@ game about jumping and hunting other people. If you remove other people from the
 game. Its name is Thasi Dsilrila, translated to "deadly hunt". Thasi Dsilrila is a
 ground, you win.
 
+\subsubsection{Sense-by-sense}
+Hello, I am Firice.
+I will be teaching you how the Tabaxym hunt.
+We have a game, called Thasi Dsilrila, and its name means "deadly hunt".
+The game is about jumping on and hunting down other people.
+If you get people down on the ground, you win.
 
 \subsection{Gloss}
 
