--- a/jjommoma.tex
+++ b/jjommoma.tex
@@ -44,6 +44,10 @@ Pelupah baseba itala sutetayelah.
 Geylepahsa sakara kula isa giledpahsa pafay sutetaypa.
 
 \subsection{Lemuria's translation}
+Children like many games.
+One of them is "Stone Fighting", where players must throw stones at other stacks of stones and topple them.
+Players can attempt to catch the stones as they are hurled at the stacks.
+The game will end once one group has no remaining stones.
 
 \subsection{Gloss}
 
