feat: Continue work on camelCaseCo's translation

--- a/camelcaseco.tex
+++ b/camelcaseco.tex
@@ -49,11 +49,11 @@ geylepahsa kaberethata, ka ifigilepelupahelah kalakad paguiba paslakalasa, ka ka
 
 
 \subsection{Lemuria's translation}
-The Basko had many games and fun activities, one of which is Ifas.
-In Ifas, ten people from four places form two groups.
-Each group would see ten, not three.
-Two of these places were big and had forests and fields.
-And thus, Ifas was born. People would walk places in search of stones.
+The Basko have a great variety of games and fun activities. One of these games is Ifas.
+In Ifas, ten people from four places merge into groups of two.
+Each group sees ten places, not three.
+Two of these places are big and have forests and fields.
+Since the first games of Ifas, people have walked to places far and wide in search of stones.
 
 \subsubsection{Literal}
 Many games stopped Basko people's fun.
