feat: Extra formatting for Zethar
There was an attempt to translate Zethar's Thiguka text.

--- a/zethar.tex
+++ b/zethar.tex
@@ -20,6 +20,15 @@
 
 \begin{document}
 
+Ambagame3 Translation
+
+From: Zethar
+
+To: Lemuria
+
+June 28, 2024
+
+
 \section{Translation}
 
 \subsection{Original}
@@ -35,13 +44,12 @@ Kakepah fusala rikaritifeylatha, thakapah safathusisa ithesipakalataysa pelukith
 \subsection{English}
 You need to listen to me. A hacker and I are hacking into the comms network right now and listening in on calls.
 
-You're isolated.
-
-You better hide. Those corporations want me to disappear and die.
-
-You act like that place's occupation is fun. What?
-
-I'm trying to help someone. I guess I might go hike with my cat.
+\begin{enumerate}
+\item A: You're isolated.
+\item B: You better hide. Those corporations want me to disappear and die.
+\item A: You act like working there is fun. Why so?
+\item B: I'm trying to help someone. I guess I might go hike with my cat.
+\end{enumerate}
 
 \section{Gloss}
 Glosses below are literal.
@@ -102,7 +110,7 @@ All I can say to this sentence is... \textit{kalisu}?
 \xe
 
 I am confused by the meaning of \textit{Kafu} in this sentence.
-
+It made me go \textit{kalisu} yet again, and unfortunately because I couldn't stop myself from procrastinating, it's hopeless.
 
 
 \section{New coins}
@@ -115,7 +123,6 @@ I am confused by the meaning of \textit{Kafu} in this sentence.
 From Zethar:
 
 \begin{quote}
-
 The text is a little short because the grammar and the lexicon doesn’t mesh well with the conculture in my conlang, so I have to write something slightly different.
 I also needed to prep for Shadowrun so for background I’m imagining this take place in a dystopian world where megacorporations control everything and has outlawed magic which has been re-surging because they don’t control it.
 I focused mostly on exercising the grammar which I was given, and I think I have pretty good coverage, at least containing something from each section.
