feat: Add footnote to jjommoma's translation

--- a/jjommoma.tex
+++ b/jjommoma.tex
@@ -46,7 +46,7 @@ Geylepahsa sakara kula isa giledpahsa pafay sutetaypa.
 \subsection{Lemuria's translation}
 Children like many games.
 One of them is "Stone Fighting", where players must throw stones at other stacks of stones and topple them.
-Players can attempt to catch the stones as they are hurled at the stacks.
+Players can attempt to catch the stones as they are hurled at the stacks.\footnote[1]{These better be pebbles because we can't have people getting injured playing this game.}
 The game will end once one group has no remaining stones.
 
 \subsection{Gloss}
@@ -87,6 +87,8 @@ The game will end once one group has no remaining stones.
       \glt{}The game stops if one group has no stones left.
 \end{exe}
 
+\newpage
+
 \section{Commentary}
 \begin{enumerate}
     \item The long dash --- indicates dashes in original source text that are supposed to be there.
@@ -95,8 +97,6 @@ The game will end once one group has no remaining stones.
     \item I am confused by "Geyle-pafay-pa"; it means "no game", but it may also be a misspelling of "pah".
     \item Using the 1SG.PRS copula ''lasa'' is incorrect here; you are not the game, you are talking about the game in the third person perspective. I would have used ''gulaya'' here.
 \end{enumerate}
-
-\newpage
 
 \section{New coins}
 \begin{enumerate}
